--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@tailwindcss/vite": "^4.1.10",
     "leaflet": "^1.9.4",
     "leaflet-ant-path": "^1.3.0",
+    "leaflet-polylinedecorator": "^1.6.0",
     "prop-types": "^15.8.1",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
